Alteração na inimação. Melhoria de código.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="particulas/particulas.css">
     <script src="particulas/particulas.js"></script>
     <script>
-        window.onload = function () {
-            particulas();
-        };
+        window.onload = () => particles();
     </script>
 </head>
 
@@ -19,7 +17,6 @@
     <div id="espacoparticulas">
         <canvas id="particulas" style="opacity: 0.27"></canvas>
     </div>
-
 </body>
 
 </html>
