--- a/index.html
+++ b/index.html
@@ -2,21 +2,35 @@
 <html lang="pt-br">
 
 <head>
-    <title>Particulas</title>
+    <title>Colisão de partículas</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="particulas/particulas.css">
-    <script src="particulas/particulas.js"></script>
-    <script>
-        window.onload = () => particles();
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            background-color: black;
+        }
+
+        #particulas {
+            opacity: 0.19;
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+    <script type="module">
+        import particlesAnimation from "./particles.js";
+        window.onload = () => particlesAnimation(document.getElementById("particulas")).start();
     </script>
 </head>
 
 <body>
-    <div id="espacoparticulas">
-        <canvas id="particulas" style="opacity: 0.27"></canvas>
-    </div>
+    <canvas id="particulas" style="opacity: 0.27"></canvas>
 </body>
 
 </html>
